@@ -1,3 +1,8 @@
+2006-12-06  Viktor Mihajlovski  <mihajlov@localhost.localdomain>
+
+	* Makefile.am, libsfcUtil.Versions:
+	Fixed 1610514: aligned sfcc/sfcb libsfcUtil
+
 2006-12-05  Viktor Mihajlovski  <mihajlov@localhost.localdomain>
 
 	* instance.c: 
